--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --fix src/**/*.ts src/**/*.tsx"
+    "lint": "eslint --fix src/**/*.ts src/**/*.tsx",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +53,8 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1"
-  }
+    "eslint-plugin-react": "^7.26.1",
+    "gh-pages": "^3.2.3"
+  },
+  "homepage": "http://jcbauschatz.github.io/cloc-gaidhlig"
 }
