Updated project home page

--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
     "eslint-plugin-react": "^7.26.1",
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://jcbauschatz.github.io/cloc-gaidhlig"
+  "homepage": "http://www.cloc-gaidhlig.com"
 }
